--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Project specific
+dist/
+
 # Created by https://www.toptal.com/developers/gitignore/api/node,windows,visualstudiocode,git,dotenv
 # Edit at https://www.toptal.com/developers/gitignore?templates=node,windows,visualstudiocode,git,dotenv
 
